--- a/笔记(JS)/0801.md
+++ b/笔记(JS)/0801.md
@@ -70,3 +70,85 @@
 	NaN是一个特殊数字，表示Not A Number
 		使用typeof检查NaN也会返回number
 	如果使用JS进行浮点运算，可能得到一个不精确的结果
+##Boolean布尔值
+	布尔值只有两个 true false，主要用于逻辑判断
+##Null和Undefined
+	null这个值专门用来表示一个为空的对象，使用typeof检查一个null值时，会返回object
+	Undefined（未定义）类型的值只有一个，就undefined
+	当声明一个变量但并不给变量赋值时，它的值就是undefined
+	使用typeof检查一个undefined时也会返回undefined
+##强制类型转换
+	指将一个数据类型转换为其他的数据类型
+	类型转换主要指将其他数据类型转换为 String Number Boolean
+	
+	**将其他数据类型转换为String**
+		方式一：
+			1. 调用被转换数据类型的toString() 方法（调用xxx的yyy方法，就是xxx.yyy()）
+			2. 该方法不会影响到原变量，他会将转换的结果返回除非使用a = a.toString();
+			3. 但是注意：null和undefined这两个值没有toString()方法，如果调用他们的方法会报错
+		方式二：
+			1. 调用String()函数，并将转换的数据作为参数传递给函数
+			2. a = String(a);
+			3. 使用String()函数做强制类型转换时，对于Number和Boolean实际上就是调用的toString()方法
+			4. 但是对于null和undefined就不会调用toString()方法。他会将null直接转换为"null"，undefined直接转换为"undefined"
+	**将其他数据类型转换为Number**
+		方式一：
+			1. 使用Number()函数		a = Number(a);
+				1.  字符串--->数字
+				2. 如果是纯数字的字符串，则直接将其转换为数字
+				3. 如果字符串中有非数字的内容，则转换为NaN
+				4. 如果字符串是一个空串或者是一个全是空格的字符串，则转换为0
+			2. 布尔值--->数字	true----1		false----0
+			3. null--->数字	0
+			4. undefined ----> 数字 NaN
+		方式二：
+			这种方式专门针对字符串	parseInt() parseFloat()
+			1. parseInt() 把一个字符串转换为一个整数
+				1. a = "123px"; a = parseInt(a);----------a = 123
+				2. parseInt可以将一个字符串中的有效整数内容取出来转换为Number
+				3. a = "123a4399px"; a = parseInt(a);----------a = 123
+				4. a = "b123a4399px"; a = parseInt(a);----------NaN
+			2. parseFloat() 把一个字符串转换为一个浮点数
+				1. a = "123.456px"; a = parseFloat(a);----------a = 123.456
+			3. 如果对非String使用parseInt()或者parseFloat()它会先将其转换为String然后再操作
+
+	**其他进制的数字**
+		在js中，如果需要表示16进制的数字，则需要以0x开头
+				如果需要表示8进制的数字，则需要以0开头
+				如果需要表示2进制的数字，则需要以0b开头
+		conso.log()结果仍是十进制数字，但不是所有浏览器都支持，所以需要标识
+			a = "070"; a = parseInt(a,10);---------十进制
+
+	**将其他的数据类型转换为Boolean**
+		使用Boolean()函数
+		var a = 123; a = Boolean(a);
+		1. 数字转布尔值 除了0和NaN都是 true
+		2. 字符串转布尔值 除了空串其余都是true
+		3. null转布尔值 false
+		4. undefined转布尔值 false
+		5. 对象也会转换为true
+##运算符
+	运算符也叫操作符
+	通过运算符可以对一个或多个值进行运算，并获得运算结果
+	比如typeof就是运算符，可以获得一个值的类型
+	1. 算术运算符	+ - * / %		
+		1. 任何值和NaN做运算都得NaN
+		2. 任何值和字符串相加都会先转换成字符串再相加
+		3. 除了+运算其他的都会转成number	result = 1 + "1"-------result = 2
+		4. 取模（取余）9 % 2 = 1
+	2. 自增和自减
+		1. 自增a++和++a
+			1. a = 1; a++;---------a = 2
+			2. a = 1; ++a;---------a = 2
+			3. a++和++a值不同
+				a++是自增前的值--------------console.log(a++);-----------1
+				++a是自增后的值--------------console.log(++a);-----------2
+		2. 自减a--和--a
+			1. 无论是a--还是--a都会使a的值立即发生变化
+			2. 不同的是a--和--a的值，a--是自减前的值，--a是自减后的值
+	3. 逻辑运算符	
+		1. !非	a = true;!a----------------false
+			对非布尔值进行非运算，先转换为布尔值再取非
+			a = 43; !a------------false
+		2. &&与	
+		3. ||或
