--- a/笔记(JS)/0801.md
+++ b/笔记(JS)/0801.md
@@ -150,5 +150,36 @@
 		1. !非	a = true;!a----------------false
 			对非布尔值进行非运算，先转换为布尔值再取非
 			a = 43; !a------------false
-		2. &&与	
+		2. &&与
+			可以对符号两侧的值进行与运算并返回结果
+			两个值中只要有一个false就返回false
+			JS中的与属于短路与：
+			如果第一个值为false就不用看第二个值；第一个值为true，会检查第二个值
 		3. ||或
+			两个值都是false 则返回false
+			只要有一个true就返回true
+			JS中的或属于短路或：
+			如果第一个值为true就不用看第二个值；第一个值为false，会检查第二个值
+		4. 非布尔值的情况
+			对于非布尔值进行与或运算时，会先将其转换为布尔值，然后再运算，并且返回原值
+			1. 与运算：如果一个值为true，则返回第二个值，如果第一个值为false，则返回第一个值
+				1. 如果两个值都为true，则返回后边的 3 && 4------4
+				2. 如果两个值中有false，则返回靠前的false 0 && 2-----0；NaN && 0-----NaN
+			2. 或运算：如果第一个值为true，则直接返回第一个值，如果第二个值为false，则直接返回第二个值
+				1. 3 && 4-----3
+				2. NaN && 0------0
+	4. 赋值运算符
+		1. =
+		2. +=
+		3. %=
+	5. 关系运算符
+		1. > 大于号		>=
+		2. < 小于号		<=
+		3. 一个数值一个非数值比较时会先将非数值转换为数值再比较
+			1. 1 >= true-------true
+			2. 1 >  "0"---------true
+			3. 任何值和NaN做比较都是-------false
+			4. 10 > null --------true
+		4. 特殊情况，两个值都是字符串，比较的是Unicode字符编码
+			1. "11" < "5"-----true
+			2. 比较字符编码是一位一位比较"abc" < "bcd"------true
