--- a/笔记(JS)/0802.md
+++ b/笔记(JS)/0802.md
@@ -62,4 +62,161 @@
 			1. 先执行 i = 0
 			2. 再执行 i < 10---------为true执行循环体，为false终止循环
 			3. 执行 i++
-	
+
+##break和continue
+	一种在内层循环使用break可以同时终止外层循环的方法
+	用法：label:for{}   break label;
+	outer:
+        for(var i = 0;i < 5;i++){
+            for(var j = 0;j < i+1;j++){
+                if(i == 2){
+                    break outer;
+                }
+                console.log(i);
+            }
+        }
+	测试运行时间：
+		console.time("test");
+		待测代码
+		console.timeEnd("test");
+##数学函数
+	Math.sqrt()-------------开方
+
+#对象 Object
+	区别于基本数据类型（String Number Boolean Null Undefined）
+	基本数据类型都是单一的值 值和值之间没有任何联系
+	对象属于一种复合的数据类型，在对象中可以保存多个不同的数据类型的属性
+##对象的分类：
+	1. 内建对象
+		1. 由ES标准中定义的对象，在任何的ES的实现中都可以使用
+		2. 比如Math String Number Boolean Function Object
+	2. 宿主对象
+		1. 由JS的运行环境提供的对象，目前来讲主要由浏览器提供的对象
+		2. 比如BOM DOM
+	3. 由开发人员自己创建的对象
+##创建对象
+	使用new关键字调用的函数，是构造函数constructor，构造函数是专门用来穿件对象的函数
+	在对象中保存的值称为属性
+	向对象添加属性
+		语法：对象.属性名 = 属性值
+	var obj = new Object();
+	obj.name = "孙悟空";
+       obj.gender = "男";
+	obj.age = 18;
+	console.log(obj.age);----------18
+	delete object.age;
+	console.log(obj.age);----------undefined
+##属性名和属性值
+	特殊的属性名命名和调用：
+		obj["123"] = 134;
+	       console.log(obj["123"]);
+		使用[]这种形式去操作属性更加的灵活，在[]中可以直接传递一个变量，这样变量值是多少就会读取那个属性
+
+	属性值：
+		JS的属性值可以使任意的数据类型
+	in运算符检查在xx中是否含有yy yy in xx
+##基本和引用数据类型
+	基本数据类型：String Number Boolean Null Undefined
+	引用数据类型：Object
+	JS中的变量都是保存在栈内存中的
+	1. 基本数据的值直接在**栈内存**中存储，值与值之间是独立存在的，修改一个不会影响另一个
+	2. 对象是保存到**堆内存**中的，每创建一个新的对象，就会在堆内存中开辟一个新的空间，
+	3. 而变量保存的是对象的内存地址（对象的引用），如果两个变量保存的是同一个对象的引用
+	4. 当比较两个引用数据类型时，比较的是对象的内存地址
+![](/img/0802/3.png)
+![](/img/0802/2.png)
+##对象字面量
+	使用对象字面量来创建一个对象
+	var obj = {
+		name:"syk",
+		age:18
+	}
+##函数
+	函数也是一个对象
+	函数中可以封装一些功能（代码），在需要时可以执行这些功能
+	创建函数对象var fun  = new Function();
+	1. 可以将要封装的代码以字符串的形式传递给构造函数：
+		var fun  = new Function("console.log('Hello');");
+		fun();-------------Hello
+	2. 实际开发中很少使用构造函数来创建一个函数对象，而是
+	使用函数声明：
+		function fun2(){
+            		console.log('Hi');
+        	}
+        	fun2();--------------Hi
+	3. 创建匿名函数来赋值：
+		var fun3 = function(){
+            		console.log("匿名函数");
+        	}
+        	fun3();-----------匿名函数
+##函数的参数
+	指定一个或多个形参
+	function sum(a,b){
+            console.log(a+b);
+        }
+        sum(43,34);------------------77
+##返回值
+	function sum(a,b,c){
+            return a+b+c;
+        }
+        var d = sum(1,2,3);
+        console.log(d);-------------------------6
+##立即执行函数
+	匿名函数整体加上括号就不会报错
+       直接在匿名函数之后加上();
+        (function(){
+            console.log("匿名函数");
+        })();------------------匿名函数
+
+##方法
+	// 对象的属性值可以是任何的数据类型，也可以是个函数
+        obj.sayName = function(){
+            console.log(obj.name);
+        };
+	// sayName是obj的方法
+        obj.sayName();
+
+	函数也可以成为对象的属性，如果一个函数作为一个对象的属性保存，那么我们称换这个函数是这个对象的方法，
+	调用函数就说调用对象的方法
+##枚举对象中的属性
+	var obj = {
+            name:"syk",
+            age:18,
+            gender:"male"
+        };
+
+        for(var n in obj){
+            console.log(n);
+        }------------------------name age gender
+
+	for(var n in obj){
+            console.log(obj[n]);
+        }------------------------syk 18 male
+##作用域
+	指一个变量的作用的范围
+	1. 全局作用域
+		在页面打开时创建，在页面关闭时销毁
+		在全局作用域中有一个全局对象window，它代表的是一个浏览器的窗口，它由浏览器创建我们可以直接使用
+		在全局作用域中：
+			创建的变量都会作为window对象的属性保存
+			var a = 123;
+			console.log(window.a);--------------123
+			创建的函数都会作为window对象的方法保存
+			var a = 123;
+        		function fun(){
+            			console.log(a);
+        		}
+        		window.fun();----------------123
+	2. 函数作用域（局部作用域）
+##变量的声明提前
+	使用var关键字声明的变量，会在所有代码执行之前被声明，但是不会赋值
+		console.log(a);----------------------undefined
+		var a=123;
+
+		console.log(a);	报错
+		a=123;
+##函数的声明提前
+	1. 使用函数声明形式创建的函数		function 函数(){}
+		它会在所有代码执行之前就被创建，所以我们可以在函数声明前调用
+	2. 使用函数表达式创建的函数		var fun = function(){}
+		它不会在所有代码执行之前就被创建，所以我们不可以在函数声明前调用
