--- a/笔记(JS)/0803.md
+++ b/笔记(JS)/0803.md
@@ -74,3 +74,75 @@
 	语法：
 		对象 instanceof 构造函数，是返回true
 		console.log(obj instanceof Person);----------------true
+
+##目前的构造函数的缺陷
+![](/img/0803/3.png)
+
+	在Person构造函数中，为每一个对象都添加了一个sayName方法，
+	目前我们的方法是在构造函数内部创建的
+		也就是构造函数每执行一次就会创建一个新的sayName方法
+	也就是所有实例的sayName都是唯一的
+	这样就导致了构造函数执行一次就会创建一个新的方法，这是完全没必要的，可以使所有的对象共享同一个方法
+
+	1. 解决方案一：将sayName方法写到全局作用域中
+		问题：将函数定义在全局作用域中，污染了全局作用域的命名空间
+        	而且定义在全局作用域中也很不安全
+![](/img/0803/4.png)
+
+	2. 解决方案二：将方法写到原型对象里
+		以后我们创建构造函数时，可以将这些对象共有的属性和方法添加进原型对象里，既不会污染全局作用域，也不用为每一个对象创建新的方法
+![](/img/0803/6.png)	
+
+##原型
+	1. 我们所创建的每一个函数，解析器都会向函数中添加一个属性prototype
+	2. 这个属性对应这一个对象，这个对象就是我们所谓的原型对象
+	3. 如果函数作为普通函数调用prototype没有任何作用
+	4. 当函数以构造函数的形式调用时，他所创建的对象中都会有一个隐含的属性，指向该构造函数的原型对象，
+		可以通过__proto__来访问该属性
+	5. 原型对象就相当于一个公共区域，所有同一个类的实例都可以访问到这个原型对象
+	6. 当我们访问对象的一个属性或方法的时候没有找到，则会去原型对象中寻找
+![](/img/0803/5.png)
+
+	原型对象也是对象，所以他也有原型，原型的原型没有原型
+	hasOwnProperty("属性名");可以检查对象是否含有该属性
+##垃圾回收（GC）
+	程序运行过程中会产生垃圾，需要一个垃圾回收机制来处理垃圾
+	在JS中拥有自动的垃圾回收机制，会自动将这些垃圾对象从内存中销毁
+	我们需要做的就是将不需要再使用的对象设置为null  obj = null
+
+#数组
+##数组的方法
+	push()
+		该方法可以向数组的末尾添加一个或多个元素，并返回数组的新的长度
+		可以将要添加的元素作为方法的参数传递，这样浙西二元素将会自动添加到数组的末尾
+	pop()
+		删除数组的最后一个元素，并将删除的元素返回
+![](/img/0803/7.png)
+	
+	unshift()
+		向数组的开头添加一个或多个元素，并返回数组的新的长度
+	shift()
+		删除数组的第一个元素，并返回被删除的元素
+###forEach()方法
+	该方法需要一个函数作为参数
+		由我们创建但是不由我们调用的函数我们成为回调函数
+	数组中有几个元素就会执行几次，每次执行时，浏览器会将遍历到的元素
+		以实参的形式传递进来，我们可以来定义形参，来读取这些内容
+	浏览器会在回调函数中传递三个参数：
+		1. 第一个参数，就是当前正在遍历的元素
+		2. 第二个参数，就是当前正在遍历的元素的索引
+		3. 第三个参数，就是正在遍历的数组
+![](/img/0803/8.png)
+![](/img/0803/9.png)
+![](/img/0803/10.png)
+###slice()和splice()
+	slice()不会影响原数组
+	splice()会影响到原数组，会将指定元素从原数组中删除并将被删除的元素作为返回值返回
+		参数：
+			第一个参数表示开始位置的所谓
+			第二个参数表示删除的元素数量
+			第三个及以后：
+				可以传递一些新的元素，这些元素将会自动插入到开始位置索引前边
+![](/img/0803/11.png)
+
+![](/img/0803/12.png)
