--- a/笔记(JS)/0803.md
+++ b/笔记(JS)/0803.md
@@ -146,3 +146,95 @@
 ![](/img/0803/11.png)
 
 ![](/img/0803/12.png)
+
+###concat()
+	连接两个数组，不会改变原数组
+	arr.concat(arr2);
+###join()
+	该方法可以将数组转换为一个字符串，不会改变原数组
+	join()可以指定参数表示分隔符
+	result1 = arr.join("--");
+      console.log(result1);----------swk--zbj--shs
+###reverse
+	该方法用来反转数组，会对原数组产生影响
+###sort()
+	对数组元素进行排序，对原数组有影响
+	arr3 = ['b','d','a','e','c'];
+	arr3.sort();
+	console.log(arr3);-------------['a','b','c','d','e']
+
+	即使对于纯数字的数组，使用sort()排序是，也会按照Unicode编码来排序，所以对数字进行排序时，可能会得到错误的结果
+
+	Unicode编码排序按照的是一位一位比较，比如23和4利用Unicode比较的时候，23首位是2，4首位是4，所以得到结果23<4
+
+	因此，我们可以自己 来指定排序的规则
+		我们可以在sort()添加一个回调函数，来指定排序规则
+		回调函数中需要定义两个形参
+		浏览器将会分别使用数组中的元素作为实参去调用回调函数
+		使用那个元素调用不确定，但是肯定的是在数组中a一定在b前边
+	浏览器会根据回调函数的返回值来决定元素的顺序
+		如果返回一个大于0的值，则元素会交换位置
+		如果返回一个小于0的值，则元素位置不变
+		如果返回一个0，则认为两个元素相等，也不交换位置
+	升序：return a-b;
+	降序：return b-a;
+![](/img/0803/13.png)
+
+#函数对象的方法
+##call和apply
+	fun.call();
+	fun.apply();
+	这两个方法都是函数对象的方法，需要通过函数对象来调用
+	当对函数调用call()和apply()都会调用函数执行
+	在调用call()和apply可以将一个对象指定为第一个参数
+	function fun(){
+            console.log(this);------------------{name:'swk',age:18}
+        }
+
+        var obj = {name:'swk',age:18};
+        fun.call(obj);
+
+	通过call和apply修改this
+
+	call()方法可以将实参在对象之后一次传递
+	apply()方法需要将实参封装到一个数组中统一传递
+
+##this的情况
+	1. 以函数形式调用时，this永远都是window
+	2. 以方法的形式调用时，this是调用方法的对象
+	3. 以构造函数的形式调用时，this是新创建的那个对象
+	4. 使用call和apply调用时，this是指定的那个对象
+
+#arguments
+	在调用函数时，浏览器每次都会传递进两个隐含的参数：
+		1. 函数的上下文对象this
+		2. 封装实参的对象 arguments
+			arguments是一个类数组对象，它也可以通过索引来操作数据，也可以获取长度
+			在调用函数时，我们所传递的实参都会在arguments中保存
+	arguments有一个属性叫做callee，这个属性对应一个函数对象，就是当前正在指向的函数的对象
+
+#Date对象
+	在JS中使用Date对象来表示一个时间
+	日期格式：月份/日/年 时:分:秒
+	var d2 = new Date("03/04/2004 3:04:04");
+	console.log(d2);--------------Thu Mar 04 2004 03:04:04 GMT+0800 (中国标准时间)
+##Date对象的方法
+###getDate()
+	返回 日
+	var date = d2.getDate();
+	console.log(date);--------4
+###getDay()
+	返回 周几
+	var date1 = d2.getDay();
+	console.log(date1);--------------4（代表周四）
+###getMonth()
+	返回月份 0代表1月 1代表2月
+	var date2 = d2.getMonth();
+	console.log(date2);
+###getTime()
+	// 获取当前日期对象的时间戳
+	// 时间戳指的是从格林威治标准时间的1970年1月1日，0时0分0秒
+	// 到当前日期所花费的毫秒数
+	var time = d2.getTime();
+	console.log(time);
+	计算机底层在保存时间时使用的都是时间戳
