--- a/笔记(JS)/0804.md
+++ b/笔记(JS)/0804.md
@@ -106,3 +106,55 @@
 	1. 以1开头	^1
 	2. 第二位3-9任意数字	[3-9]
 	3. 三位以后任意数字9个	[0-9]{9}$
+##.
+	常规情况下，.表示任意字符
+	如果想要检查.，需要使用转义字符\.
+###元字符
+![](/img/0804/2.png)
+	-\w	任意字母、数字、_	[A-z0-9_]
+	-\W	除了字母、数字、_	[^A-z0-9_]
+	-\d	任意的数字	[0-9]
+	-\D	除了数字	[^0-9]
+	-\s	空格
+	-\S	除了空格
+	-\b	单词边界
+		检查某个单词child
+		var reg2 = /\bchild\b/;
+		console.log(reg2.test("hello children"));------------false
+	-\B	除了单词边界
+
+![](/img/0804/3.png)
+	
+	匹配开头结果的空格：/^\s*|\s*$/g
+
+#DOM
+##模型
+![](/img/0804/4.png)
+##节点
+![](/img/0804/5.png)
+##DOM事件
+	https://www.w3school.com.cn/jsref/dom_obj_event.asp
+##获取对象
+	var btn = document.getElementById("btn");
+##绑定一个单击事件
+	btn.onclick = function(){
+		……
+	}
+#文档的加载
+	浏览器在加载页面的时候，是按照自上向下的顺序加载的
+	读取到一行就运行一行，如果将script标签卸载页面的上边，
+	在代码执行时，页面还没有加载
+
+	所以要绑定一个事件意在加载完页面之后再执行定义的事件
+	onload事件会在整个页面加载完成之后才除法
+	为window绑定一个onload事件：
+		该事件对应的响应函数将会在页面加载完成之后执行，
+		这样可以确保我们的代码执行时所有的DOM对象已经加载完毕了
+##获取元素节点
+![](/img/0804/6.png)
+
+	// innerHTML用于获取元素内部的HTML代码的
+	// 而input标签属于自结束标签，没有结束的</input>，所以无法使用innerHTML获取里边的内容
+	// 可以直接读取属性名比如：元素.value
+		注意：读取class属性时不能直接 元素.class，而需要采用
+		元素.className
