--- a/笔记(JS)/0805.md
+++ b/笔记(JS)/0805.md
@@ -19,3 +19,63 @@
 ##previousElementSibling
 	获取前一个兄弟元素（不包括空白）
 #在事件的响应函数中，响应函数是给谁绑定的，this就是谁
+
+#在document中有一个属性body，它保存的是body的引用
+![](/img/0805/3.png)
+#document.documentElement保存的是html根标签
+	var de = document.documentElement;
+#document.all保存的是页面中所有元素
+	var all = document.all;
+	相当于var all = document.getElementsByTagName("*");
+#document.querySelector()
+	需要一个选择器的字符串作为参数，可以根据一个CSS选择器来查询一个元素节点对象
+	var div = document.querySelector(".box1 div");
+	console.log(div.innerHTML);
+	
+	使用该方法总会返回唯一的元素，如果满足条件的元素有多个，那么它只会返回第一个
+#document.querySelectorAll()
+	与querySelector()类似，不同的是它会返回所有满足条件的元素构成数组
+	var div1 = document.querySelectorAll(".box1 div");
+	console.log(div1[1].innerHTML);
+
+#dom增删改
+##增
+###方案一（操作较繁琐）
+	1. document.createElement()
+		可以用于创建一个元素节点对象
+		它需要一个标签名作为参数，将会根据该标签名创建元素节点对象
+		并将创建好的对象作为返回值返回
+		var li = document.createElement("li");
+	2. createTextNode()
+		可以用于创建文本节点
+		var gztext = document.createTextNode("广州");
+	3. appendChild()
+		将某元素添加为子节点
+		li.appendChild(gztext);	//将gztext添加为li的子节点
+	4. insertBefore()
+		可以在指定的子节点前插入新的子节点
+		父节点.insertBefore(新的子节点,指定的子节点);
+###方案二（操作简单但需要耗费更多的时间）
+	因为使用innerHTML每次都会更新之前的HTML内容
+	在city下增加	<li>广州</li>节点
+	city.innerHTML += "<li>广州</li>";
+###结合方案一二（推荐使用）
+	1. 先创建对象document.createElement()
+	2. 利用innerHTML向对象中添加文本
+	3. 使用appendChild()加入到父节点中
+	var li = document.createElement("li");
+	li.innerHTML = "广州";
+	city.appendChild(li);
+
+##改replaceChild()
+	可以将指定的子节点替换为新的子节点
+	父节点.replaceChild(新的子节点,指定的子节点);
+##删
+	1. 已知父节点的情况：
+		removeChild()
+		可以将指定的子节点删除
+		父节点.removeChild(指定的子节点);
+	2. 未知父节点的情况：！！更常用！！
+		指定子节点.parentNode.removeChild(指定的子节点);
+##修改某元素的HTML代码
+	某元素.innerHTML = "修改内容";
