--- a/笔记(JS)/0806.md
+++ b/笔记(JS)/0806.md
@@ -31,3 +31,47 @@
 			可以通过对象.样式名来读取样式
 			如果获取的样式没有设置，则会获取到真实的值，而不是默认值
 			比如：没有设置width，它不会获取到auto，而是一个长度
+	3. // 定义一个函数，用来获取指定元素的当前的样式
+                // 参数：1.obj 要获取样式的元素 2.name 要获取的样式名
+                function getStyle(obj,name){
+                    // 加window表示getComputedStyle是一个属性，不加是变量
+                    // 变量如果寻找不到会报错，属性寻找不到会返回false
+                    if(window.getComputedStyle){
+                        // 正常浏览器
+                        return getComputedStyle(obj,null)[name];
+                    }else{
+                        // IE8
+                        return obj.currentStyle[name];
+                    }
+                }
+
+##其他样式相关的属性
+###clientWidth和clientHeight
+	这两个属性可以获取元素的可见宽度和高度
+	这些属性都是不带px的，返回都是一个数字，可以直接进行计算
+	会获取元素宽度和高度，包括内容区和内边距
+	这些属性都是只读的，不能修改
+###offsetWidth和offsetHeight
+	获取元素的整个的宽度和高度，包括内容区、内边距和边框
+###offsetParent
+	可以用来获取当前元素的定位父元素
+	会获取到当前元素最近的开启了定位的祖先元素
+	如果所有的祖先元素都没有开启定位，则返回body
+###offsetLeft和offsetTop
+	当前元素相对于其定位父元素的水平/垂直偏移量
+###scrollHeight/scrollWidth
+	获取滚动区所有的高度/宽度
+###scrollLeft/scrollTop
+	获取水平/垂直滚动条当前滚动的距离
+	
+	当满足scrollHeight-scrollTop == clientHeight时：
+		说明垂直滚动条滚动到底了
+##如果为表单项添加disabled = "disabled"，表示表单不可用
+		* disabled属性可以设置一个元素是否禁用，
+		* 如果设置为true，则元素禁用
+		* 如果设置为false，则元素可用
+	inputs[0].disabled = false;
+	inputs[1].disabled = false;
+#滚动条滚动事件onscroll
+
+		
