--- a/笔记(JS)/0809.md
+++ b/笔记(JS)/0809.md
@@ -57,3 +57,15 @@
 	setTimeout(function(){
 		console.log(num++);----------------------1
 	},3000);
+
+
+#类的操作
+	box.style.width = "200px";
+	通过style属性来修改元素的样式，每修改一个样式，浏览器就需要渲染一次页面
+	这样的执行的性能是比较差的，而且这种形式当我们要修改多个样式时非常不方便
+	可以通过修改元素的class属性来简介地修改样式
+	这样一来，我们只需要修改一次，即可修改多个样式
+	浏览器只需要重新渲染页面一次，性能比较好
+	并且这种方式，可以将表现和行为进一步分离
+![](/img/0809/1.png)
+![](/img/0809/2.png)
