--- a/笔记(JS Advance)/0812.md
+++ b/笔记(JS Advance)/0812.md
@@ -1,4 +1,4 @@
-#数据类型
+ #数据类型
 ##分类
 	1. 基本（值）类型
 		1. string
@@ -48,5 +48,55 @@
 ##什么是内存
 	内存条通电后产生的可储存数据的空间（临时的）
 	内存产生和死亡：内存条（电路板）==>通电==>产生内存空间==>存储数据==>处理数据==>断电==>内存空间和数据都消失
-	一块小内存的2个数据
-		
+	一块小内存的2个数据：
+		1. 内部存储的数据
+		2. 地址值
+##内存分类
+	1. 栈
+		1. 全局变量
+		2. 局部变量
+	2. 堆
+		1. 对象
+		2. 对象中的数据
+##数据的特点
+	1. 可传递
+	2. 可运算
+##数据、变量和内存三者的关系
+	1. 内存用来存储数据的空间
+	2. 变量时内存的标识
+##相关问题
+	var a = xxx，a内存中到底保存的是什么
+	1. xxx是基本数据，保存的就是这个数据
+		var a = 3;----------a中保存的是3
+	2. xxx是对象，保存的是对象的地址值
+		var a = function(){}---------------a中保存的是地址
+	3. xxx是一个变量，保存的xxx的内存内容（可能是基本数据，也可能是地址值）
+		var a = {};var b = a;
+##关于引用变量赋值问题
+	1. 多个引用变量指向同一个对象，通过一个变量修改对象内部数据，其他所有变量看到的是修改之后的数据
+		var obj1 = {name:'Tom'};
+		var obj2 = obj1;	//将obj1的地址值赋值给obj2
+		obj1.name = 'Jack';
+		console.log(obj2.name);----------------Jack
+	2. 2个引用变量指向同一个对象，让其中一个引用变量指向另一个对象，另一引用变量依然指向前一个对象
+		var a = {age:12};
+		var b = a;
+		a = {age:13};
+		console.log(b.age,a.age);------------12,13
+![](/img/0812/6.png)
+
+	3. js在调用函数传递参数变量时，是值传递（引用传递传递的也是地址值）
+		var a = 3;
+		function fn(a){
+			a = a+1;
+		}
+		fn(a);
+		console.log(a);     //3
+##JS引擎如何管理内存
+1. 内存生命周期
+	1. 分配小内存空间，得到他的使用权
+	2. 存储数据，可以反复进行操作
+	3. 释放小内存空间
+2. 释放内存
+	1. 局部变量：函数执行完自动释放
+	2. 对象：成为垃圾对象==>垃圾回收器回收
