--- a/笔记(JS Advance)/0914.md
+++ b/笔记(JS Advance)/0914.md
@@ -19,5 +19,18 @@
 2. 别名：隐式原型链
 3. 作用：查找对象的属性（方法）
 ![](/img/0914/2.png)
-##构造函数/原型/实体对象的关系
-##构造函数/原型/实体对象的关系2
+
+##所有函数的__proto__都是一样的
+##任何函数都是new Function()产生的
+
+##构造函数/原型/实例对象的关系
+![](/img/0914/3.png)
+
+1. 函数的显式原型指向的对象：默认是空Object实例对象（但Object不满足）
+2. 所有函数都是Function的实例，包括它本身，Function是它自身的实例
+3. Object的原型对象是原型链尽头 
+
+##原型链的属性
+1. 读取对象的属性值时：会自动到原型链中查找
+2. 设置对象的属性值时：不会查找原型链，如果当前对象中没有此属性，直接添加此属性并设置其值
+3. 方法一般定义在原型中，属性一般通过构造函数定义在对象本身上
