--- a/笔记(JS Advance)/0914.md
+++ b/笔记(JS Advance)/0914.md
@@ -1,7 +1,7 @@
 # 显式原型与隐式原型
 	1. 每个函数function都有一个prototype，即显式原型（属性）
 	2. 每个实例对象都有一个__proto__，可成为隐式原型（属性）
-	3. 对象的隐式原型的值为其对应构造函数的显式原型的值
+	3. **对象的隐式原型的值为其对应构造函数的显式原型的值**
 		console.log(Fn.prototype === fn.__proto__);-----------true
 	4. 内存结构（如下图）
 	5. 总结
