--- a/笔记(JS Advance)/1003.md
+++ b/笔记(JS Advance)/1003.md
@@ -12,7 +12,7 @@
 2. 死亡: 在嵌套的内部函数成为垃圾对象时(f = null)
 
 #闭包的应用
-定义JS模块
+##定义JS模块
   * 具有特定功能的js文件
   * 将所有的数据和功能都封装在一个函数内部(私有的)
   * 只向外暴露一个包信n个方法的对象或函数
